templates/k8s/angular/ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: $NAMESPACE
spec:
  selector:
    app: $APP_NAME
    role: frontend
    type: web
  ports:
    - port: 80
      targetPort: $PORT
