templates/k8s/angular/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: $WEB_INGRESS_NAME
  namespace: $NAMESPACE
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: $HOSTNAME
    http:
      paths:
      - path: /
        backend:
          serviceName: web-service
          servicePort: 80
